[package]
name = "timeago-cli"
version = "0.4.3"
authors = ["Jeffrey Jose <jeffjosejeff@gmail.com>"]
edition = "2018"
description = "A dead-simple CLI tool to convert RFC2822 to short humanized strings"
keywords = ["cli", "timeago", "humanize"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"


[[bin]]
name = "timeago"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chrono-humanize = "0.1.1"
structopt = "0.3"

[dev-dependencies]
test-case = "1.0.0"
